<resources>
    <string name="app_name">LangMaster</string>
    <string name="select_language">Select Language</string>
    <string name="button_continue">continue</string>
    <string name="exercise">Exercise</string>
    <string name="description">description</string>
    <string name="word_1">Word 1</string>
    <string name="select_the_word_s">Select the word %s</string>
    <string name="lives_d">Lives: %d</string>
    <string name="result">Result</string>
    <string name="try_again">try again</string>
    <string name="czech">Czech</string>
</resources>