<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Result">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="156dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimary"
        android:text="@string/try_again"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultImage" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="156dp"
        android:layout_height="72dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_continue"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultImage" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText"
        tools:srcCompat="@drawable/jojo_victory" />

</androidx.constraintlayout.widget.ConstraintLayout>