<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".TaskActivity">

    <TextView
        android:id="@+id/livesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#FF0000"
        android:shadowColor="#000000"
        android:layout_marginEnd="16dp"
        android:text="@string/lives_d"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectWord"
        android:layout_width="313dp"
        android:layout_height="99dp"
        android:layout_marginTop="56dp"
        android:textColor="@color/colorPrimary"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/select_the_word_s"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageChoice1"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectWord"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageChoice2"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectWord"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageChoice3"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageChoice4"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription3"
        tools:srcCompat="@tools:sample/avatars" />



    <TextView
        android:id="@+id/textDescription1"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:textColor="#000000"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/word_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageChoice1" />

    <TextView
        android:id="@+id/textDescription2"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:text="@string/word_1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageChoice3" />

    <TextView
        android:id="@+id/textDescription3"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="#000000"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:text="@string/word_1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageChoice2"/>


    <TextView
        android:id="@+id/textDescription4"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="#000000"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:text="@string/word_1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageChoice4" />


</androidx.constraintlayout.widget.ConstraintLayout>